--- a/src/pages/resources/resources.html
+++ b/src/pages/resources/resources.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar [color]="getColor()">
-    <ion-title>Resources</ion-title>
+    <ion-title>{{objective}} Resources</ion-title>
     <ion-buttons left>
       <button ion-button icon-only (click)="onModalClose()" class="my-style-for-modal">
         <ion-icon name="close"></ion-icon>
