Added objective number to header, updated app icon and readme.  App published on play store

--- a/src/pages/domain/domain.html
+++ b/src/pages/domain/domain.html
@@ -3,7 +3,7 @@
 <ion-header>
 
   <ion-navbar [color]="getColor()">
-    <ion-title>N10-007</ion-title>
+    <ion-title>220-901</ion-title>
   </ion-navbar>
 
 </ion-header>
