--- a/src/pages/objective-detail/objective-detail.html
+++ b/src/pages/objective-detail/objective-detail.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   <ion-navbar [color]="getColor()">
-    <ion-title>{{objective.sectionNumber}} {{ domainTitle }}</ion-title>
+    <ion-title>{{objective.sectionNumber}} {{ domainTitle.slice(4) }}</ion-title>
   </ion-navbar>
 </ion-header>
 
